# windows-libc

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  MODULES.md  NOTES.md  README.md
cmake/: FindWLIBC.cmake  (+2 more)
src/: CMakeLists.txt
src/dirent/: CMakeLists.txt  alphasort.c  closedir.c  dirfd.c  fill_dir_buffer.c  opendir.c  readdir.c  rewinddir.c  scandir.c  seekdir.c  telldir.c
src/dlfcn/: CMakeLists.txt  dlclose.c  dlerror.c  dlfcn_internal.c  dlopen.c  dlsym.c
src/errno/: CMakeLists.txt  program.c
src/error/: CMakeLists.txt  error.c
src/fcntl/: CMakeLists.txt  creat.c  fcntl.c  fcntl_internal.c  internal.c  open.c  open2.c  openat.c  osfhandle.c
src/getopt/: CMakeLists.txt  getopt.c
src/grp/: CMakeLists.txt  grent.c  grgid.c  grnam.c
src/internal/: CMakeLists.txt  buffer.c  convert.c  error.c  misc.c  path.c  registry.c  security.c  wlibc_errors.c  wmain.c
src/langinfo/: CMakeLists.txt  langinfo.c  langinfo_internal.c  nl_langinfo.c
src/poll/: CMakeLists.txt  fdset.c  poll.c  select.c
src/pwd/: CMakeLists.txt  pwent.c  pwnam.c  pwuid.c
src/sched/: CMakeLists.txt  affinity.c  cpuset.c  open.c  param.c  scheduler.c  yield.c
src/signal/: CMakeLists.txt  internal.c  raise.c  sigaction.c  signal.c  signal_internal.c  sigprocmask.c
src/spawn/: CMakeLists.txt  actions.c  attributes.c  internal.c  spawn.c
src/stdio/: CMakeLists.txt  clearerr.c  fclose.c  fdopen.c  feof.c  ferror.c  fflush.c  fgetc.c  fgets.c  fileno.c  fileops.c  flock.c  fopen.c  fputc.c  fputs.c  fread.c  freopen.c  fseek.c  ftell.c  fwrite.c  getdelim.c  internal.c  mode.c  parse_mode.c  pclose.c  perror.c  pipe-hooks.c  popen.c  printf.c  rename.c  renameat.c  scanf.c  setvbuf.c  stdio-hooks.c  temp.c  ungetc.c
src/stdlib/: CMakeLists.txt  mkstemp.c  setenv.c  unsetenv.c
src/string/: CMakeLists.txt  ffs.c  memrchr.c  strerror.c  strndup.c  strsignal.c
src/sys/acl/: CMakeLists.txt  acl.c  entry.c  flags.c  object.c  perm.c  qualifier.c  tag.c
src/sys/file/: CMakeLists.txt  flock.c
src/sys/ioctl/: CMakeLists.txt  ioctl.c
src/sys/mman/: CMakeLists.txt  mlock.c  mmap.c  mprotect.c  msync.c  munlock.c  munmap.c
src/sys/mount/: CMakeLists.txt  getmntinfo.c
src/sys/random/: CMakeLists.txt  random.c
src/sys/resource/: CMakeLists.txt  priority.c  rlimit.c  rusage.c
src/sys/stat/: CMakeLists.txt  chflags.c  chmod.c  mkdir.c  stat.c  statx.c  utimens.c
src/sys/statfs/: CMakeLists.txt  statfs.c
src/sys/statvfs/: CMakeLists.txt  statvfs.c
src/sys/time/: CMakeLists.txt  clock.c  gettimeofday.c  internal.c  itimer.c  timer.c  utimes.c
src/sys/times/: CMakeLists.txt  times.c
src/sys/utsname/: CMakeLists.txt  uname.c
src/sys/wait/: CMakeLists.txt  process_internal.c  wait.c  waitpid.c
src/sys_random/: CMakeLists.txt
src/sys_resource/: CMakeLists.txt  rlimit.c
src/sys_stat/: CMakeLists.txt  chmod.c  fchmodat.c  fstatat.c  mkdir.c  mkdirat.c  stat.c  utimens.c
src/sys_time/: CMakeLists.txt  gettimeofday.c
src/sys_wait/: process_internal.c  waitpid.c
src/sys_xattr/: CMakeLists.txt  getxattr.c  listxattr.c  setxattr.c
src/termios/: CMakeLists.txt  tcattr.c  tcmisc.c
src/thread/: CMakeLists.txt  barrier.c  cond.c  internal.c  key.c  mutex.c  once.c  rwlock.c  thread.c
src/unistd/: CMakeLists.txt  access.c  alarm.c  chdir.c  chown.c  close.c  conf.c  domainname.c  dup.c  exec.c  faccessat.c  fchownat.c  fsync.c  getcwd.c  getdtablesize.c  getgid.c  getpagesize.c  getpid.c  gettid.c  getuid.c  gid.c  hostname.c  isatty.c  kill.c  link.c  linkat.c  lseek.c  nice.c  pid.c  pipe.c  pread.c  pwrite.c  read.c  readlink.c  readlinkat.c  remove.c  rmdir.c  sleep.c  symlink.c  symlinkat.c  (+6 more)
src/wchar/: CMakeLists.txt  width.c
tests/: CMakeLists.txt  test-macros.h
tests/dirent/: CMakeLists.txt  test-closedir.c  test-dirent.c  test-fdopendir.c  test-opendir.c  test-scandir.c
tests/dlfcn/: CMakeLists.txt  test-dlfcn.c
tests/errno/: CMakeLists.txt  test-program.c
tests/error/: CMakeLists.txt  test-err.c  test-error.c
tests/fcntl/: CMakeLists.txt  test-at.c  test-fcntl.c  test-open.c  test-openat.c  test-path.c  test-sanity.c
tests/getopt/: CMakeLists.txt  test-getopt.c
tests/grp/: CMakeLists.txt  test-grp.c
tests/langinfo/: CMakeLists.txt  test-langinfo.c
tests/poll/: CMakeLists.txt  test-poll.c  test-select.c
tests/pthread/: CMakeLists.txt  test-barrier.c  test-cond.c  test-key.c  test-mutex.c  test-once.c  test-rwlock.c  test-thread.c
tests/pwd/: CMakeLists.txt  test-pwd.c
tests/sched/: CMakeLists.txt  test-cpuset.c  test-sched.c
tests/signal/: CMakeLists.txt  test-raise_signal.c  test-segmentation-fault.c  test-sigaction.c  test-signal.c  test-sigprocmask.c
tests/spawn/: CMakeLists.txt  arg.c  basic.c  cwd.c  env.c  inherit.c  path.c  shebang.1  simple.c  test-spawn.c
tests/stdio/: CMakeLists.txt  pipe-helper.c  test-fdopen.c  test-fflush.c  test-fileio.c  test-fileno.c  test-fopen.c  test-freopen.c  test-getdelim.c  test-internal.c  test-pipe.c  test-printf.c  test-rename.c  test-renameat.c  test-scanf.c  test-stream.c  test-temp.c  test-ungetc.c
tests/stdlib/: CMakeLists.txt  test-env.c  test-mkstemp.c  test-un_set_env.c
tests/sys_file/: CMakeLists.txt  test-flock.c
tests/sys_random/: CMakeLists.txt
tests/sys_stat/: CMakeLists.txt  test-chmod.c  test-mkdir.c  test-mkdirat.c  test-stat.c  test-utimens.c
tests/sys_wait/: CMakeLists.txt  test-waitpid.c
tests/sys_xattr/: CMakeLists.txt  test-xattr.c
tests/thread/: CMakeLists.txt  test-barrier.c  test-cond.c  test-mutex.c  test-once.c  test-rwlock.c  test-thread.c
tests/threads/: CMakeLists.txt  test-cnd.c  test-init.c  test-mtx.c  test-thrd.c  test-tss.c
tests/unistd/: CMakeLists.txt  kill-helper.c  test-access.c  test-alarm.c  test-chdir.c  test-chown.c  test-close.c  test-dup.c  test-getcwd.c  test-io.c  test-isatty.c  test-kill.c  test-link.c  test-linkat.c  test-nice.c  test-pio.c  test-pipes.c  test-read_write.c  test-remove.c  test-rmdir.c  test-sym_read_link.c  test-sym_read_linkat.c  test-symlinks.c  test-truncate.c  test-ttyname.c  test-unlink.c  test-unlinkat.c
(+131 files in other folders)
